<resources>
    <string name="app_name">CarBTDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="contact_initial"></string>
    <string name="contact_name">Unknown</string>
    <string name="tab_dial">Dial</string>
    <string name="tab_phone_book">Phonebook</string>
    <string name="tab_call_history">Call History</string>
    <string name="tab_music">Music</string>
    <string name="tab_settings">Settings</string>
    <string name="bt_settings_text">No Connect</string>
    <string name="open_bt_string">Bluetooth</string>
    <string name="close_bt_string">Power Off</string>
    <string name="scan_btdevice_string">Scan</string>
    <string name="discovery_bt_string">Visible</string>
    <string name="indiscovery_bt_string">Invisible</string>
    <string name="trypair_bt_string">Pair</string>
    <string name="dispair_bt_string">unPair</string>
    <string name="connect_bt_string">Connect</string>
    <string name="disconnect_bt_string">disConnect</string>
    <string name="bt_pairconnect_return">Return</string>
    <string name="bt_status_unpair">Not Paired</string>
    <string name="bt_status_paired">Paired</string>
    <string name="bt_status_connecting">Connecting</string>
    <string name="bt_status_connected">Connected</string>
    <string name="bt_status_connected_phone">phone Connected</string>
    <string name="bt_status_connected_media">media Connected</string>
    <string name="autoanswer_bt_string">Auto Answer</string>
    <string name="non_autoanswer_bt_string">Non Auto Answer</string>
    <string name="autoconnect_bt_string">Auto Connect</string>
    <string name="non_autoconnect_bt_string">Non Auto Connect</string>
    <string name="edit_bt_string">Device Info</string>
    <string name="localname_string">Edit Name</string>
    <string name="pin_string">Edit Pin</string>
    <string name="received_string">Received</string>
    <string name="dialed_string">Dialed</string>
    <string name="missed_string">Missed</string>
    <string name="history_all_string">All Calls</string>
    <string name="history_clear_string">Clear</string>
    <string name="str_download_history">Downloading...</string>
    <string name="str_download_phonebook">Downloading...</string>
    <string name="str_loading_record">Loading...</string>
    <string name="str_call_info">not connected</string>
    <string name="str_clear_all">Clear</string>
    <string name="str_call">Call</string>
    <string name="str_btn_recall">Recall</string>
    <string name="str_1">1</string>
    <string name="str_2">2</string>
    <string name="str_3">3</string>
    <string name="str_4">4</string>
    <string name="str_5">5</string>
    <string name="str_6">6</string>
    <string name="str_7">7</string>
    <string name="str_8">8</string>
    <string name="str_9">9</string>
    <string name="str_0">0</string>
    <string name="str_pound">#</string>
    <string name="str_asterisk">*</string>
    <string name="str_A">A</string>
    <string name="str_B">B</string>
    <string name="str_C">C</string>
    <string name="str_D">D</string>
    <string name="str_E">E</string>
    <string name="str_F">F</string>
    <string name="str_G">G</string>
    <string name="str_H">H</string>
    <string name="str_I">I</string>
    <string name="str_J">J</string>
    <string name="str_K">K</string>
    <string name="str_L">L</string>
    <string name="str_M">M</string>
    <string name="str_N">N</string>
    <string name="str_O">O</string>
    <string name="str_P">P</string>
    <string name="str_Q">Q</string>
    <string name="str_R">R</string>
    <string name="str_S">S</string>
    <string name="str_T">T</string>
    <string name="str_U">U</string>
    <string name="str_V">V</string>
    <string name="str_W">W</string>
    <string name="str_X">X</string>
    <string name="str_Y">Y</string>
    <string name="str_Z">Z</string>
    <string name="str_Enter">Enter</string>
    <string name="str_Delete">Delete</string>
    <string name="str_Return">Return</string>
    <string name="str_volume">10</string>
    <string name="str_title_paired">Device List</string>
    <string name="none_paired">None Paired Device</string>
    <string name="bt_turning_on">Turning On Bluetooth</string>
    <string name="bt_turned_on">Bluetooth is turned on</string>
    <string name="bt_turning_off">Turning Off Bluetooth</string>
    <string name="bt_turned_off">Bluetooth is turned off</string>
    <string name="bt_turn_error">Bluetooth turn error</string>
    <string name="bt_discoverable">Bluetooth Discoverable</string>
    <string name="bt_discoverable_false">Bluetooth Discoverable closed</string>
    <string name="bluetooth_error_title">Attention</string>
    <string name="str_bluetooth_phone_not_connected">Not Connect With a Bluetooth Phone</string>
    <string name="str_handsfree_device_connected">Handsfree device is connected</string>
    <string name="str_handsfree_device_disconnected">Handsfree device is Disconnected</string>
    <string name="str_income_call_status">Incoming Call</string>
    <string name="str_out_call_status">Outgoing Call</string>
    <string name="str_bt_call_active">On Calling</string>
    <string name="str_bt_call_inactive">Call End</string>
    <string name="str_bt_call_end"> &#160;&#160; Call end</string>
    <string name="str_bt_call_softkeypad"> &#160;&#160;&#160; Keypad</string>
    <string name="str_bt_call_answer"> &#160;&#160;&#160;Answer</string>
    <string name="str_bt_call_carsound">&#160;&#160;&#160;&#160;&#160;&#160;&#160;Car</string>
    <string name="str_bt_call_phonesound">&#160;&#160;&#160;&#160;Phone</string>
    <string name="str_calling_phone_number">10086</string>
    <string name="a2dp_status_title">A2DPCLIENT</string>
    <string name="a2dpsink_status_connected_info">connected</string>
    <string name="a2dpsink_status_notconnected_info">not connected</string>
    <string name="a2dpsink_status_connecting_info">connecting</string>
    <string name="a2dpsink_status_disconnecting_info">disconnecting</string>
    <string name="avrcp_status_title">AVRCP</string>
    <string name="avrcp_status_info">not connected</string>
    <string name="disconnecta2dp">discA2DP</string>
    <string name="disconnectavrcp">discAVRCP</string>
    <string name="avrcpct_status_connected_info">connected</string>
    <string name="avrcpct_status_notconnected_info">not connected</string>
    <string name="avrcpct_status_connecting_info">connecting</string>
    <string name="avrcpct_status_disconnecting_info">disconnecting</string>
    <string name="bluetooth_profile_a2dp">Media</string>
    <string name="bluetooth_profile_a2dp_sink">Media Sink</string>
    <string name="bluetooth_profile_headset">Phone</string>
    <string name="bluetooth_profile_headset_client">Phone Client</string>
    <string name="bluetooth_profile_opp">Transfer</string>
    <string name="bluetooth_profile_ftp">File transfer</string>
    <string name="bluetooth_profile_hid">Wireless keyboard</string>
    <string name="bluetooth_profile_dun">Dial up network</string>
    <string name="bluetooth_profile_pbap">Contact sharing</string>
    <string name="bluetooth_profile_pan_NAP">Network Access Point</string>
    <string name="bluetooth_profile_pan_GN">Group Ad hoc Network</string>
    <string name="bluetooth_profile_hf">Hands free sink</string>
    <string name="bluetooth_profile_pbap_client">Phone book client</string>
    <string name="bluetooth_profile_avrcp_ct">Audio Vedio Remote Control Controller</string>
    <string name="bluetooth_profile_dun_dt">Dial Up Networking Data Terminal</string>
    <string name="bluetooth_profile_prxm">Proximity monitor</string>
    <string name="bluetooth_prxm_profile_summary_connected">Connected</string>
    <string name="bluetooth_prxm_profile_summary_use_for">Use for proximity monitor</string>
    <string name="bluetooth_a2dp_profile_summary_connected">Connected to media audio</string>
    <string name="bluetooth_headset_profile_summary_connected">Connected to phone audio</string>
    <string name="bluetooth_opp_profile_summary_connected">Connected to file transfer server</string>
    <string name="bluetooth_opp_profile_summary_not_connected">Not connected to file transfer server</string>
    <string name="bluetooth_hid_profile_summary_connected">Connected to wireless keyboard</string>
    <string name="bluetooth_pbap_profile_summary_connected">Connected to phone book access</string>
    <string name="bluetooth_dun_profile_summary_connected">Connected to dial up network</string>
    <string name="bluetooth_pan_NAP_profile_summary_connected">Connected to external network</string>
    <string name="bluetooth_pan_GN_profile_summary_connected">Connected to GN server</string>
    <string name="bluetooth_hf_profile_summary_connected">Hands free sink Connected</string>
    <string name="bluetooth_pbap_client_profile_summary_connected">Connected to access phone book</string>
    <string name="bluetooth_a2dp_sink_profile_summary_connected">Connected to media audio sink</string>
    <string name="bluetooth_avrcp_ct_profile_summary_connected">Connected to Audio Vedio Control Target</string>
    <string name="bluetooth_dun_dt_profile_summary_connected">Connected to dial up network data terminal</string>
    <string name="bluetooth_ftp_profile_summary_connected">"Connected to file transfer"</string>
    <string name="bluetooth_a2dp_profile_summary_use_for">Use for media audio</string>
    <string name="bluetooth_headset_profile_summary_use_for">Use for phone audio</string>
    <string name="bluetooth_opp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_ftp_profile_summary_use_for">Use for file transfer</string>
    <string name="bluetooth_hid_profile_summary_use_for">Use for wireless keyboard</string>
    <string name="bluetooth_pbap_profile_summary_use_for">Use for phone book access</string>
    <string name="bluetooth_dun_profile_summary_use_for">Use for dial up network</string>
    <string name="bluetooth_hf_profile_summary_use_for">Use for hands free</string>
    <string name="bluetooth_pan_NAP_profile_summary_use_for">Access external network</string>
    <string name="bluetooth_pan_GN_profile_summary_use_for">To form an Ad hoc network</string>
    <string name="bluetooth_pbap_client_profile_summary_use_for">Use for access phone book</string>
    <string name="bluetooth_a2dp_sink_profile_summary_use_for">Use for meida audio sink</string>
    <string name="bluetooth_avrcp_ct_profile_summary_use_for">Use for Remote Audio Vedio Control</string>
    <string name="bluetooth_dun_dt_profile_summary_use_for">Use for dial up network</string>
    <string name="bluetooth_summary_connected_to_a2dp">Connected to media audio</string>
    <string name="bluetooth_summary_connected_to_headset">Connected to phone audio</string>
    <string name="bluetooth_summary_connected_to_a2dp_headset">Connected to phone and media audio</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting\u2026</string>
    <string name="bluetooth_connecting">Connecting\u2026</string>
    <string name="bluetooth_unknown"></string>
    <string name="bluetooth_not_connected">Pair with this device</string>
    <string name="bluetooth_pairing">Pairing\u2026</string>
    <string name="bluetooth_paired">Paired but not connected</string>
    <string name="bluetooth_preference_scan_title">Scan for devices</string>
    <string name="bluetooth_options_menu_refresh">Refresh</string>
    <string name="bluetooth_device_context_rename">Rename</string>
    <string name="bluetooth_device_context_rename_edittext">rename_edittext</string>
    <string name="bluetooth_device_context_connect">Connect</string>
    <string name="bluetooth_device_context_disconnect">Disconnect</string>
</resources>