<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/list_view_bg">

        <EditText
            android:id="@+id/text_call_info"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:singleLine="true"
            android:textSize="40sp"
            android:background="#00000000"/>

        <ImageButton
            android:id="@+id/btn_del_num"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:src="@drawable/ic_backspace" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/list_view_bg"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_call_one"
                style="@style/DialPadNum"
                android:text="@string/str_1"
                android:background="@drawable/alph_selector" />
            <Button
                android:id="@+id/btn_call_four"
                style="@style/DialPadNum"
                android:text="@string/str_4"
                android:background="@drawable/alph_selector" />
            <Button
                android:id="@+id/btn_call_seven"
                style="@style/DialPadNum"
                android:text="@string/str_7"
               android:background="@drawable/alph_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_call_two"
                style="@style/DialPadNum"
                android:text="@string/str_2" 
                 android:background="@drawable/alph_selector" />
            <Button
                android:id="@+id/btn_call_five"
                style="@style/DialPadNum"
                android:text="@string/str_5"
                 android:background="@drawable/alph_selector" />
            <Button
                android:id="@+id/btn_call_eight"
                style="@style/DialPadNum"
                android:text="@string/str_8"
                android:background="@drawable/alph_selector" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_call_three"
                style="@style/DialPadNum"
                android:text="@string/str_3"
                android:background="@drawable/alph_selector" />
            <Button
                android:id="@+id/btn_call_six"
                style="@style/DialPadNum"
                android:text="@string/str_6"
                android:background="@drawable/alph_selector" />
            <Button
                android:id="@+id/btn_call_nine"
                style="@style/DialPadNum"
                android:text="@string/str_9"
                android:background="@drawable/alph_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_call_asterisk"
                style="@style/DialPadNum"
                android:text="@string/str_asterisk"
                android:background="@drawable/alph_selector" />
            <Button
                android:id="@+id/btn_call_zero"
                style="@style/DialPadNum"
                android:text="@string/str_0"
                android:background="@drawable/alph_selector" />
            <Button
                android:id="@+id/btn_call_pound"
                style="@style/DialPadNum"
                android:text="@string/str_pound"
                android:background="@drawable/alph_selector" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#1FFFFFFF"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_recall"
                style="@style/DialPadNum"
                android:text="@string/str_btn_recall"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                 android:background="@drawable/alph_selector" />
            <ImageButton
                android:id="@+id/btn_call"
                android:layout_height="56dp"
                android:layout_width="56dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_btn_1"
                android:src="@drawable/ic_call"
                android:scaleType="center"
                android:text="@string/str_call"
                android:textColor="#FFFFFF"
                 />
            <Button
                android:id="@+id/btn_clear_all_num"
                style="@style/DialPadNum"
                android:text="@string/str_clear_all"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                 android:background="@drawable/alph_selector" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
