<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="112dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_open_bt"
                style="@style/ButtonStyle"
                android:text="@string/open_bt_string"
                 android:background="@drawable/alph_selector" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_scan_bt"
                style="@style/ButtonStyle"
                android:text="@string/scan_btdevice_string"
                 android:background="@drawable/alph_selector" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/btn_discovery_bt"
                style="@style/ButtonStyle"
                android:checked="false"
                android:textOff="@string/discovery_bt_string"
                android:textOn="@string/indiscovery_bt_string"
                android:background="@drawable/btn_on_bg"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/btn_autoanswer_bt"
                style="@style/ButtonStyle"
                android:checked="false"
                android:textOff="@string/autoanswer_bt_string"
                android:textOn="@string/non_autoanswer_bt_string"
                android:visibility="gone"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <ToggleButton
                android:id="@+id/btn_autoconnect_bt"
                style="@style/ButtonStyle"
                android:checked="false"
                android:textOff="@string/autoconnect_bt_string"
                android:textOn="@string/non_autoconnect_bt_string"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_edit_bt"
                style="@style/ButtonStyle"
                android:text="@string/edit_bt_string" 
                 android:background="@drawable/alph_selector" />
        </LinearLayout>

        <ListView
            android:id="@+id/bluetooth_paired_devices"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:cacheColorHint="#00000000"
            android:choiceMode="singleChoice" />
    </LinearLayout>

    <!-- waiting downloading layout -->
    <RelativeLayout
        android:id="@+id/scan_device_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressbar_scan_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/blue_progressbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/progressbar_scan_device"
            android:text="@string/str_download_phonebook"
            android:textColor="#FFFFFF"
            android:visibility="visible" />
    </RelativeLayout>

</FrameLayout>